More... bad commit message

--- a/theme/scss/rcu.scss
+++ b/theme/scss/rcu.scss
@@ -5,3 +5,16 @@
 .lower-links li {
   margin-bottom: .75em;
 }
+
+.scroll-image {
+  overflow: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: auto;
+}
+.scroll-image img {
+  max-width: 100%;
+}
