--- a/theme/css/rcu.css
+++ b/theme/css/rcu.css
@@ -1,1 +1,1 @@
-.lower-links{font-size:.9em;margin-top:2em}.lower-links li{margin-bottom:.75em}.scroll-image{overflow:auto;position:absolute;top:0;right:0;bottom:0;left:0;overflow:auto}.scroll-image img{max-width:100%}pre{background-color:#f7f7f7}
+.lower-links{font-size:.9em;margin-top:2em}.lower-links li{margin-bottom:.75em}.scroll-image{overflow:auto;position:absolute;top:0;right:0;bottom:0;left:0;overflow:auto}.scroll-image img{max-width:100%}pre{background-color:#f7f7f7}.undercover{text-decoration:none;border:none}
